--- a/bin/control
+++ b/bin/control
@@ -18,7 +18,7 @@ function start {
   echo "Starting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
   ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
-  /usr/sbin/httpd $HTTPD_CMD_CONF -k start
+  eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k start"
 }
 
 function stop {
@@ -26,7 +26,7 @@ function stop {
   ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
   if [ -f "$HTTPD_PID_FILE" ]; then
       httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
-      /usr/sbin/httpd $HTTPD_CMD_CONF -k stop
+      eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k stop"
       wait_for_stop $httpd_pid
   fi
 }
@@ -34,7 +34,7 @@ function stop {
 function restart {
   echo "Restarting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
-  /usr/sbin/httpd $HTTPD_CMD_CONF -k restart
+  eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k restart"
 }
 
 function status {
