httpd cartridges: OVERRIDE with custom httpd conf
bug 1065533
https://bugzilla.redhat.com/show_bug.cgi?id=1065533
Implementation of bz 1054918 was intended to allow sysadmins to
override cartridges confs if needed. It didn't. This does.

--- a/bin/control
+++ b/bin/control
@@ -9,9 +9,9 @@ HTTPD_PASSENV_FILE=${OPENSHIFT_PHPMYADMIN_DIR}conf.d/passenv.conf
 HTTPD_PID_FILE=${OPENSHIFT_PHPMYADMIN_DIR}run/httpd.pid
 
 # construct the configuration directives for httpd
-HTTPD_CMD_CONF="-f $HTTPD_CFG_FILE"
-for dir in ${OPENSHIFT_PHPMYADMIN_DIR}conf.d /etc/openshift/cart.conf.d/httpd{,/phpmyadmin} ; do
-    [ -d $dir ] && HTTPD_CMD_CONF="$HTTPD_CMD_CONF -C 'Include $dir/*.conf'"
+HTTPD_CMD_CONF="-C 'Include ${OPENSHIFT_PHPMYADMIN_DIR}conf.d/*.conf' -f $HTTPD_CFG_FILE"
+for dir in /etc/openshift/cart.conf.d/httpd{,/phpmyadmin} ; do
+    [ -d $dir ] && HTTPD_CMD_CONF="$HTTPD_CMD_CONF -c 'Include $dir/*.conf'"
 done
 
 function start {
