Report lingering httpd procs following graceful shutdown
When doing a graceful httpd shutdown, detect and report any
lingering httpd processes that remain.

Resolve bug: https://bugzilla.redhat.com/show_bug.cgi?id=1080465

--- a/bin/control
+++ b/bin/control
@@ -25,9 +25,7 @@ function stop {
   echo "Stopping PHPMyAdmin cartridge"
   ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
   if [ -f "$HTTPD_PID_FILE" ]; then
-      httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
-      kill -WINCH $httpd_pid
-      wait_for_stop $httpd_pid
+      shutdown_httpd_graceful_pidfile $HTTPD_PID_FILE
   fi
 }
 
