Make restarts resilient to missing/corrupt pidfiles
Resolve bug https://bugzilla.redhat.com/show_bug.cgi?id=1081901

--- a/bin/control
+++ b/bin/control
@@ -32,6 +32,7 @@ function stop {
 function restart {
   echo "Restarting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
+  ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
   if [ -f "$HTTPD_PID_FILE" ]; then
     httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
     kill -HUP $httpd_pid
