--- a/bin/control
+++ b/bin/control
@@ -18,7 +18,11 @@ function start {
   echo "Starting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
   ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
+  # Force httpd into its own pgroup, as httpd is hard-coded to TERM everything in
+  # its pgroup during shutdown (even while foregrounded)
+  set -m
   eval "nohup /usr/sbin/httpd $HTTPD_CMD_CONF -D FOREGROUND |& /usr/bin/logshifter -tag phpmyadmin &"
+  set +m
 }
 
 function stop {
