--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -6,8 +6,9 @@ Description: Web based MySQL admin tool. Requires the MySQL cartridge to be inst
 Version: '4'
 License: GPLv2
 Vendor: Red Hat
-Cartridge-Version: 0.0.10
-Compatible-Versions: []
+Cartridge-Version: 0.0.11
+Compatible-Versions:
+- 0.0.10
 Cartridge-Vendor: redhat
 Website: http://www.phpmyadmin.net/
 Categories:
